# rs-executor

./: Cargo.toml  README.md  README.zh_CN.md
src/: lib.rs
src/executor/: delay_executor.rs  direct_executor.rs  executor.rs  future_executor.rs  mod.rs  thread_per_task_executor.rs
src/service/: executor_service.rs  mod.rs  rejected_execution.rs  shutdown_report.rs  thread_per_task_executor_service.rs
src/task/: mod.rs  task_completion.rs  task_completion_pair.rs  task_execution_error.rs  task_handle.rs  task_handle_inner.rs  task_handle_state.rs  task_runner.rs
tests/: mod.rs  task_execution_error_tests.rs
tests/executor/: delay_executor_tests.rs  direct_executor_tests.rs  mod.rs  thread_per_task_executor_tests.rs
tests/service/: mod.rs  thread_per_task_executor_service_tests.rs
tests/task/: mod.rs  task_execution_error_tests.rs  task_handle_tests.rs  task_runner_tests.rs
